--- a/calculator.html
+++ b/calculator.html
@@ -1,55 +1,17 @@
 <! doctype html><meta charset"utf-8">
 <meta name ="calculator" content "a simple calculator">
 
+
 <head> 
 <title> calculator </title>
-
-     
- <style> 
-.button{
-width :50;
-height:50;
-font-size:25;
-margin:8;
-border-radius: 50%;
-pading :7;
-border-width: 0;
-background : ivory;
-}
-.textview{
-margin :12;
-pading :10;
-width :275;
-height :70;
-font-size:30;
-background :lightgoldenrodyellow;
-border-radius: 5%;
-top :5%;
-}
-.main{
-position:absolute;
-top :25%;
-left :40%;
-width :300;
-height :420;
-transform:translateX(-50%)  (-30%)
-border-height: 190;
-border-width: 80;
-background: dimgray;
-border-radius: 2%;
-}
-.backgrounddiv{
-background: linear-gradient(to right, rgba(255,0,0,0), rgba(0,191,255));
-height : 100%;
-}
-	 
-</style>
+<link href="css/style.css" type="text/css" rel="stylesheet">
  </head>
 
 <body> 
 
 <div class ="backgrounddiv"></div>
 <div class ="main">
+
 <form name = "form">
 <input class ="textview" name ="textview" >
 </form>               
@@ -74,7 +36,7 @@ height : 100%;
 <input class ="button" type="button"value ="1" onClick="insert(1)"></button>
 <input class ="button" type="button"value ="2" onClick="insert(2)"></button>
 <input class ="button" type="button"value ="3" onClick="insert(3)"></button>
-<input class ="button" type="button" value ="÷"  onClick="insert('/')"></button>
+<input class ="button" type="button" value ="รท"  onClick="insert('/')"></button>
 
 <p></p>
 
@@ -82,7 +44,6 @@ height : 100%;
 <input class ="button" type="button"value ="-" onClick="insert('-')"></button>
 <input class ="button" type="button" value ="+" onClick="insert('+')"></button>
 <input class ="button" type="button" value ="=" onClick="equal()"></button>
-
 
      <script> 
 	  
@@ -94,11 +55,12 @@ height : 100%;
 	  var result = document.form.textview.value;
 	  if(result){
 		document.form.textview.value = eval(result);
-	  }
+	 }
 	}
-	     
+	
 	function clean(){
 		document.form.textview.value = "";
+
 	}
 	
 	</script>
