--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <input class ="button" type="button"value ="1" onClick="insert(1)"></button>
 <input class ="button" type="button"value ="2" onClick="insert(2)"></button>
 <input class ="button" type="button"value ="3" onClick="insert(3)"></button>
-<input class ="button" type="button" value ="รท"  onClick="insert('/')"></button>
+<input class ="button" type="button" value ="/"  onClick="insert('/')"></button>
 
 <p></p>
 
